upgrade it to handle large size of files or scaned document